[project]
name = "mcp-story-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.61.0",
    "google-generativeai>=0.8.6",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.1",
    "tavily-python>=0.7.21",
]
